--- a/pyramid.html
+++ b/pyramid.html
@@ -19,8 +19,8 @@
             </select>
         </div>
         <div>
-            <input type="range" name="Pyramid height" id="pyramidHeight">
-            <label id="rangeLabel">This is the range<label>
+            <input type="range" name="Pyramid height" id="pyramidHeight" min="1" max="15" value="5">
+            <label id="rangeLabel">5<label>
         </div>
                 
     </div>
