--- a/pyramid.html
+++ b/pyramid.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pyramid slide</title>
     <link rel="stylesheet" type="text/css" href="myStyle.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 </head>
+
 <body>
     <h1>Pyramid slice</h1>
     <div id="menuDiv">
         <div class="menu1">
-            <label>Brick symbol: </label> 
+            <label>Brick symbol: </label>
             <select name="brick symbol" id="brickSymbol">
                 <option value="#">#</option>
                 <option value="@">@</option>
@@ -23,11 +27,12 @@
             <input type="range" name="Pyramid height" id="pyramidHeight" min="1" max="15" value="5">
             <span id="rangeLabel">5<span>
         </div>
-                
+
     </div>
     <div class="container">
         <div id="pyramidContainer"></div>
     </div>
     <script type="text/javascript" src="mainScript.js"></script>
 </body>
+
 </html>
